--- a/main.html
+++ b/main.html
@@ -11,6 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div  class="player_one">
+		<a href=" https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank" >song1 </a> <br>
+		<a href=" https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank" >song2 </a> <br> 
+        <a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >song3 </a> <br>
+		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >song4 </a> <br>
+		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >song5 </a> <br>
 </body>
 
 </html>
