--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1> My playlist</h1>
 
 	<div  class="player_one">
 		<a href=" https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank" >song1 </a> <br>
@@ -17,6 +18,7 @@
         <a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >song3 </a> <br>
 		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >song4 </a> <br>
 		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >song5 </a> <br>
+	</div>	
 </body>
 
 </html>
