--- a/main.html
+++ b/main.html
@@ -22,6 +22,8 @@
 	<h2>Now Playing...</h2>
 	<div class="player_two">
 		<video controls src="https://www.w3schools.com/tags/movie.mp4"> </video>
+		<h2>MP3 songs</h2>
+		<h3>Maan Meri Jaan</h3>
 			<audio controls src="https://www.pagalworld.com.se/files/download/id/64630"></audio>
 	</div>
 </body>
