--- a/main.html
+++ b/main.html
@@ -13,19 +13,22 @@
 	<h1> My playlist</h1>
 
 	<div  class="player_one">
-		<a href=" https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank" >Song 1 </a> <br>
-		<a href=" https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank" >Song 2 </a> <br> 
-        <a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >Song 3 </a> <br>
-		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >Song 4 </a> <br>
-		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >Song 5 </a> <br>
+		<ul>
+		    <li><a href=" https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank" >Song 1 </a><li>
+			<li><a href=" https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank" >Song 2 </a></li>	
+            <li><a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >Song 3 </a></li>
+		    <li><a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >Song 4 </a></li>
+			<li><a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank" >Song 5 </a> </li>
+		</ul>	
 	</div>
 	<h2>Now Playing...</h2>
 	<div class="player_two">
 		<video controls src="https://www.w3schools.com/tags/movie.mp4"> </video>
 		<h2>MP3 songs</h2>
-		<h3>Maan Meri Jaan</h3>
+		<h2>Maan Meri Jaan</h3>
 			<audio controls src="https://www.pagalworld.com.se/files/download/id/64630"></audio>
 	</div>
+	<source src="" type="">
 </body>
 
 </html>
